Fix reminders dropdown icons alignment on RTL

--- a/src/themes/corteza-base/rtl.scss
+++ b/src/themes/corteza-base/rtl.scss
@@ -17,4 +17,8 @@
   .vs__selected-options {
     flex-direction: row-reverse;
   }
+
+  .vs__clear {
+    margin: 0 5px;
+  }
 }
